# tadpole

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac
config/: HTMLchars  Makefile.am  abbr.ned  apostrof.ned  cgn-wotan-dcoi.mbt.1paxes  cgn-wotan-dcoi.mbt.known.dddwfWawa.wgt  cgn-wotan-dcoi.mbt.settings  cgn-wotan-dcoi.mbt.top500  largeparserconfig  lconfig  mbdp-tadpole-alpino.dir.ibase.wgt  mbdp-tadpole-alpino.dir.large-ibase.wgt  mbdp-tadpole-alpino.dir.small-ibase  mbdp-tadpole-alpino.dir.small-ibase.wgt  mbdp-tadpole-alpino.pairs.sampled.ibase.wgt  mbdp-tadpole-alpino.pairs.sampled.large-ibase.wgt  mbdp-tadpole-alpino.pairs.sampled.small-ibase  mbdp-tadpole-alpino.pairs.sampled.small-ibase.wgt  mbdp-tadpole-alpino.rels.ibase.wgt  mbdp-tadpole-alpino.rels.large-ibase.wgt  mbdp-tadpole-alpino.rels.small-ibase  mbdp-tadpole-alpino.rels.small-ibase.wgt  mblem.tree  mblem.tree.wgt  mbma.igtree  mbma.igtree.wgt  mconfig  measure.ned  money  mwu.suspects5  mwuconfig  ordinals.ned  parserconfig  sgml  smallparserconfig  special_words.ned  suffixes.ned  vreemd
contrib/tadpoleclient/: paralleltest.sh  tadpoleclient.py  test.py
include/: Makefile.am  unicode_utils.h
include/tadpole/: Makefile.am  Parser.h  Tadpole.h  mblem_mod.h  mbma_mod.h  mwu_chunker_mod.h  unicode_utils.h
m4/: Makefile.am  ac_check_icu.m4  acboost.m4  ax_icu_check.m4  ax_openmp.m4  boost.m4
scripts/: Makefile.am  csi.sh  csidp.py  csiparse.py  csiparse2.py  dir.py  dsample.py  finalizeParser.sh.in  main.py  pairs.py  prepare.sh  prepareParser.sh.in  rels.py  runexp-all.csh  runparser.sh  simple.py  util.py
scripts/pylet/: Makefile.am
scripts/pylet/data/: Makefile.am
scripts/pylet/util/: Makefile.am  __init__.py  collections.py  exceptions.py
src/: Makefile.am  Parser.cxx  ServerSocket.cxx  Socket.cxx  TPtokenize  TPtokenize.in  Tadpole-util.cxx  Tadpole.cxx  mblem_mod.cxx  mbma_mod.cxx  mwu_chunker_mod.cxx  unicode_utils.cxx
trunk/: ChangeLog  README  configure.ac
trunk/config/: HTMLtags  abbr.deu.tmp  abbr.ned  cgn-wotan-dcoi.mbt.1paxes  cgn-wotan-dcoi.mbt.known.dddwfWawa.wgt  mblem.tree  money
trunk/contrib/tadpoleclient/: README
trunk/include/tadpole/: Tadpole.h  mbma_mod.h  mwu_chunker_mod.h  unicode_utils.h
trunk/scripts/: distance.py
trunk/scripts/pylet/: Makefile.am
trunk/scripts/pylet/util/: decorators.py  process.py
trunk/src/: Parser.cxx  TPtokenize.in  Tadpole.cxx  mblem_mod.cxx  mbma_mod.cxx  mwu_chunker_mod.cxx
