# $Id$
# $URL:$

config_DATA = lconfig mconfig mwuconfig \
	parserconfig smallparserconfig largeparserconfig \
	mblem.transtable  mblem.tree mblem.tree.wgt \
	mbma.igtree mbma.igtree.wgt \
        mwu.suspects5 \
	HTMLchars HTMLtags sgml \
	abbr.deu.tmp \
	abbr.ned apostrof.ned measure.ned suffixes.ned \
	special_words.ned ordinals.ned prefixes.ned \
	cgn-wotan-dcoi.mbt.1paxes cgn-wotan-dcoi.mbt.lex \
	cgn-wotan-dcoi.mbt.known.dddwfWawa \
	cgn-wotan-dcoi.mbt.known.dddwfWawa.wgt \
	cgn-wotan-dcoi.mbt.lex.ambi.05 \
	cgn-wotan-dcoi.mbt.settings \
	cgn-wotan-dcoi.mbt.top500 \
	cgn-wotan-dcoi.mbt.unknown.chnppdddwFawasss \
	cgntags.main cgntags.sub \
	mbdp-tadpole-alpino.pairs.sampled.small-ibase \
	mbdp-tadpole-alpino.pairs.sampled.small-ibase.wgt \
	mbdp-tadpole-alpino.dir.small-ibase \
	mbdp-tadpole-alpino.dir.small-ibase.wgt \
	mbdp-tadpole-alpino.rels.small-ibase \
	mbdp-tadpole-alpino.rels.small-ibase.wgt \
	mbdp-tadpole-alpino.pairs.sampled.ibase \
	mbdp-tadpole-alpino.pairs.sampled.ibase.wgt \
	mbdp-tadpole-alpino.dir.ibase \
	mbdp-tadpole-alpino.dir.ibase.wgt \
	mbdp-tadpole-alpino.rels.ibase \
	mbdp-tadpole-alpino.rels.ibase.wgt \
	mbdp-tadpole-alpino.pairs.sampled.large-ibase \
	mbdp-tadpole-alpino.pairs.sampled.large-ibase.wgt \
	mbdp-tadpole-alpino.dir.large-ibase \
	mbdp-tadpole-alpino.dir.large-ibase.wgt \
	mbdp-tadpole-alpino.rels.large-ibase \
	mbdp-tadpole-alpino.rels.large-ibase.wgt \
	money vreemd
configdir = $(prefix)/etc/$(PACKAGE)

EXTRA_DIST = $(config_DATA)

